<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF000"
            android:gravity="center_vertical|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/biografi_mahasiswa"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nama_aliya_raffa_naura_ayu"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nim_2310817120014"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/program_studi_teknologi_informasi"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fakultas_teknik"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/univ_ulm"
                android:textSize="18sp"
                android:layout_marginBottom="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLihatDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lihat_detail"
                android:textColor="#000000"
                android:background="@drawable/rounded_button"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>
