<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF000"
            android:gravity="center_vertical|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/biografi_mahasiswa"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/fotoMahasiswa"
            android:layout_width="239dp"
            android:layout_height="268dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/foto_mahasiswa"
            android:src="@drawable/foto_aliya" />

        <TextView android:text="Nama: Aliya Raffa Naura Ayu"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView android:text="NIM: 2310817120014"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView android:text="Program Studi: Teknologi Informasi"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />


        <TextView android:text="@string/fakultas_teknik"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/univ_ulm"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:text="@string/asal_banjarmasin"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:text="@string/hobi_naura"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:text="@string/cita_cita"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnKembali"
            android:text="@string/kembali"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:textColor="#000000"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="24dp"/>


    </LinearLayout>
</ScrollView>
